infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "StudentManagement22A97B7F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "StudentManagementVPC"
     }
    ]
   }
  },
  "StudentManagementPublicSubnet1Subnet07361AE2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPublicSubnet1RouteTableE45F6CE1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPublicSubnet1RouteTableAssociation5E6560E9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StudentManagementPublicSubnet1RouteTableE45F6CE1"
    },
    "SubnetId": {
     "Ref": "StudentManagementPublicSubnet1Subnet07361AE2"
    }
   }
  },
  "StudentManagementPublicSubnet1DefaultRoute4C310927": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "StudentManagementIGW27195BF2"
    },
    "RouteTableId": {
     "Ref": "StudentManagementPublicSubnet1RouteTableE45F6CE1"
    }
   },
   "DependsOn": [
    "StudentManagementVPCGW86FF01B7"
   ]
  },
  "StudentManagementPublicSubnet1EIP1D32EBA6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet1"
     }
    ]
   }
  },
  "StudentManagementPublicSubnet1NATGatewayA86EB78B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "StudentManagementPublicSubnet1EIP1D32EBA6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "StudentManagementPublicSubnet1Subnet07361AE2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "StudentManagementPublicSubnet1DefaultRoute4C310927",
    "StudentManagementPublicSubnet1RouteTableAssociation5E6560E9"
   ]
  },
  "StudentManagementPublicSubnet2Subnet906E030B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPublicSubnet2RouteTable2FCA4186": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPublicSubnet2RouteTableAssociation8DD4EAAD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StudentManagementPublicSubnet2RouteTable2FCA4186"
    },
    "SubnetId": {
     "Ref": "StudentManagementPublicSubnet2Subnet906E030B"
    }
   }
  },
  "StudentManagementPublicSubnet2DefaultRoute1F3E817A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "StudentManagementIGW27195BF2"
    },
    "RouteTableId": {
     "Ref": "StudentManagementPublicSubnet2RouteTable2FCA4186"
    }
   },
   "DependsOn": [
    "StudentManagementVPCGW86FF01B7"
   ]
  },
  "StudentManagementPublicSubnet2EIPCA204E2A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet2"
     }
    ]
   }
  },
  "StudentManagementPublicSubnet2NATGateway340CD2EF": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "StudentManagementPublicSubnet2EIPCA204E2A",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "StudentManagementPublicSubnet2Subnet906E030B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "StudentManagementPublicSubnet2DefaultRoute1F3E817A",
    "StudentManagementPublicSubnet2RouteTableAssociation8DD4EAAD"
   ]
  },
  "StudentManagementPrivateSubnet1SubnetF06213D1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPrivateSubnet1RouteTable5378C320": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPrivateSubnet1RouteTableAssociationC774EC4C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StudentManagementPrivateSubnet1RouteTable5378C320"
    },
    "SubnetId": {
     "Ref": "StudentManagementPrivateSubnet1SubnetF06213D1"
    }
   }
  },
  "StudentManagementPrivateSubnet1DefaultRoute85837347": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "StudentManagementPublicSubnet1NATGatewayA86EB78B"
    },
    "RouteTableId": {
     "Ref": "StudentManagementPrivateSubnet1RouteTable5378C320"
    }
   }
  },
  "StudentManagementPrivateSubnet2Subnet6ED5B92A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPrivateSubnet2RouteTable5E62B84E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/StudentManagement/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "StudentManagementPrivateSubnet2RouteTableAssociationF67F1269": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StudentManagementPrivateSubnet2RouteTable5E62B84E"
    },
    "SubnetId": {
     "Ref": "StudentManagementPrivateSubnet2Subnet6ED5B92A"
    }
   }
  },
  "StudentManagementPrivateSubnet2DefaultRoute631C4443": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "StudentManagementPublicSubnet2NATGateway340CD2EF"
    },
    "RouteTableId": {
     "Ref": "StudentManagementPrivateSubnet2RouteTable5E62B84E"
    }
   }
  },
  "StudentManagementIGW27195BF2": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StudentManagementVPC"
     }
    ]
   }
  },
  "StudentManagementVPCGW86FF01B7": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "StudentManagementIGW27195BF2"
    },
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "StudentManagementPrivateSubnet1SubnetF06213D1"
     },
     {
      "Ref": "StudentManagementPrivateSubnet2Subnet6ED5B92A"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "StudentServiceDBSubnetGroupA604082B": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for StudentServiceDB database",
    "SubnetIds": [
     {
      "Ref": "StudentManagementPrivateSubnet1SubnetF06213D1"
     },
     {
      "Ref": "StudentManagementPrivateSubnet2Subnet6ED5B92A"
     }
    ]
   }
  },
  "StudentServiceDBSecurityGroup47832934": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for StudentServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "StudentManagement22A97B7F"
    }
   }
  },
  "localstackStudentServiceDBSecretE09900813fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "StudentServiceDBSecretAttachment697E251D": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackStudentServiceDBSecretE09900813fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "StudentServiceDB922FA1D0"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "StudentServiceDB922FA1D0": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "student-service-db",
    "DBSubnetGroupName": {
     "Ref": "StudentServiceDBSubnetGroupA604082B"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackStudentServiceDBSecretE09900813fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "StudentServiceDBSecurityGroup47832934",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "StudentServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "StudentServiceDB922FA1D0",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "StudentServiceDB922FA1D0",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "StudentManagementPrivateSubnet1SubnetF06213D1"
      },
      {
       "Ref": "StudentManagementPrivateSubnet2Subnet6ED5B92A"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  }
 }
}
